<resources>
    <string name="app_name">M. Music</string>
    <string name="title_library">Library</string>
    <string name="title_podcast">PodCast</string>
    <string name="title_folder">Folder</string>
    <string name="title_settings">Settings</string>
    <string name="tab_songs_text">songs</string>
    <string name="tab_albums_text">albums</string>
    <string name="tab_artists_text">artists</string>
    <string name="content_description_image">image</string>
    <string name="title_activity_main">Material Music</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="up_next">Up next</string>
    <string name="tab_playlists_text">playlists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
