<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_library"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_library"/>

    <item
            android:id="@+id/navigation_podcast"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:enabled="false"
            android:title="@string/title_podcast"/>

    <item
            android:id="@+id/navigation_folder"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/title_folder"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:enabled="false"
            android:title="@string/title_settings"/>


</menu>
