<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_library">

    <fragment
            android:id="@+id/navigation_library"
            android:name="com.jesusmoreira.materialmusic.ui.library.LibraryFragment"
            android:label="@string/title_library"
            tools:layout="@layout/fragment_library"/>

    <fragment
            android:id="@+id/navigation_podcast"
            android:name="com.jesusmoreira.materialmusic.ui.podcast.PodcastFragment"
            android:label="@string/title_podcast"
            tools:layout="@layout/fragment_podcast"/>

    <fragment
            android:id="@+id/navigation_folder"
            android:name="com.jesusmoreira.materialmusic.ui.folder.FolderFragment"
            android:label="@string/title_folder"
            tools:layout="@layout/fragment_folder"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.jesusmoreira.materialmusic.ui.settings.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings"/>
</navigation>