<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--    <TextView-->
<!--            android:id="@+id/text_home"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--    android:visibility="gone"/>-->

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_songs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_songs_text" />

        <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_albums"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_albums_text" />

        <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_artists"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_artists_text" />

        <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_playlists"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_playlists_text" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>